@@ -59,7 +59,7 @@ Developer experiments     TRY-<developer>-<short-desc>
                  |                             289 REL-2.0.0
                  |                             305 REL-2.0.1
                  |                             308 REL-2.0.2
-                 |                             |
+                 |  <--------------------------310
                  |                             |
                  |                             v RB-2.0
                  v
